# taskwarrior-simple-rest

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  task.rs
