[package]
name = "taskwarrior_simple_rest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.9.0"
chrono = "0.4.38"
env_logger = "0.11.5"
serde = {version="1.0.215", features=["derive"]}
serde_json = "1.0.133"
tokio = {version="1.41.1", features=["rt", "macros", "process"]}
